~ Rewritten for Joomla 4
Basic plumbing

--- a/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
+++ b/plugins/system/sociallogin/language/en-GB/en-GB.plg_system_sociallogin.ini
@@ -3,39 +3,13 @@
 ;; @license   GNU General Public License version 3, or later
 
 PLG_SYSTEM_SOCIALLOGIN="System - Akeeba Social Login"
-PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Displays the social network login buttons. Use the options to tell this plugin whether it should auto-append the social login buttons to the login modules / login page or, alternatively, you'd rather use template overrides according to the documentation."
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_J4BUTTONS_LABEL="Joomla 4 login button injection"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_J4BUTTONS_DESC="Only works on Joomla 4. When enabled, SocialLogin will inject buttons to Joomla's login modules and login page using the new <code>onUserLoginButtons</code> plugin event. All other options in this plugin configuration tab will be completely ignored on Joomla 4 sites when this option is enabled. While this injection method is guaranteed to work on core Joomla 4 it might be incompatible with third party login modules and templates. Moreover, it comes with limitations on button styling. If you are having trouble displaying or styling the buttons on Joomla 4 you will need to disable this option."
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_LABEL="Frontend Login Modules' Names"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LOGINMODULES_DESC="Enter the comma separated list of names of frontend modules. The social buttons will be appended to them automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_LABEL="Backend Login Modules' Names"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_BACKENDLOGINMODULES_DESC="Enter the comma separated list of names of backend modules. The social buttons will be appended to them automatically, e.g. <code>mod_login, mod_ajaxlogin</code>. Set this to <code>none</code> to prevent this behavior. In this case you must make template overrides according to the documentation."
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_LABEL="Social Login button placement"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_OPT_NEXTTOLOGIN="Next to Login button"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_OPT_ENDOFMODULE="End of module content"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATE_DESC="The various Joomla login modules, including Joomla's own, do not offer a way to place additional buttons next to the Login button. If you use the 'Next to Login button' option Akeeba Social Login will use Javascript to move its login buttons next to what is <i>possibly</i> the Login action button of the module. If that fails, or if you use the 'End of module content' option, the Social Login buttons will be placed at the end of the module's content."
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_LABEL="Add buttons to login page"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_INTERCEPTLOGIN_DESC="When enabled the plugin will automatically append the social login buttons to the end of the login page created by Joomla's com_users. Otherwise you must make template overrides according to the documentation."
-
-COM_PLUGINS_SOCIALLOGIN_USERACCOUNT_FIELDSET_LABEL="User account integration"
+PLG_SYSTEM_SOCIALLOGIN_DESCRIPTION="Login or create users using social network logins. This plugin tells Joomla which buttons to render."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_LABEL="Add buttons to user account page"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_DESC="When enabled the plugin will automatically add a social media section in the Edit User Account page of Joomla's com_users. This lets users link or unlink their account to their social media presence. If disabled you will have to make template overrides according to the documentation."
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_LINKUNLINKBUTTONS_DESC="When enabled the plugin will automatically add a social media section in the Edit User Account page of Joomla's com_users. This lets users link or unlink their account to their social media presence."
 
 PLG_SYSTEM_SOCIALLOGIN_CONFIG_SHOW_DONTREMIND_LABEL="Show the don't remind field in the user account page"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_SHOW_DONTREMIND_DESC="When both this and the previous option are enabled the plugin will add a “Don't remind me to link my social media profiles” field in the user profile. If the user set this to Yes the plugin will NOT assign this user to any user groups, despite your settings in the “User groups” section of this plugin's configuration."
-
-COM_PLUGINS_SOCIALLOGIN_EXPERT_FIELDSET_LABEL="Expert Settings"
-
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_LABEL="CSS Selectors for button placement"
-PLG_SYSTEM_SOCIALLOGIN_CONFIG_RELOCATESELECTORS_DESC="Used with the 'Next to Login button' option in the Basic section. Comma- or newline-separated list of CSS selectors to locate the Login button inside the Login module. The default selectors should work with most login modules."
-
-COM_PLUGINS_SOCIALLOGIN_USERGROUPS_FIELDSET_LABEL="User groups"
+PLG_SYSTEM_SOCIALLOGIN_CONFIG_SHOW_DONTREMIND_DESC="When both this and the previous option are enabled the plugin will add a “Don't remind me to link my social media profiles” field in the user profile. If the user set this to Yes the plugin will NOT assign this user to any user groups, despite your settings below."
 
 PLG_SYSTEM_SOCIALLOGIN_LINKEDACCOUNTUSERGROUP_TITLE="User Group when social network account is linked"
 PLG_SYSTEM_SOCIALLOGIN_LINKEDACCOUNTUSERGROUP_DESC="Add the user to this Joomla User Group <em>dynamically</em> when they have linked their Joomla user profile with a social network account. The user group assignment is only valid throughout the login session and is NOT stored in the database."
@@ -44,7 +18,6 @@ PLG_SYSTEM_SOCIALLOGIN_NOLINKEDACCOUNTUSERGROUP_TITLE="User Group when social ne
 PLG_SYSTEM_SOCIALLOGIN_NOLINKEDACCOUNTUSERGROUP_DESC="Add the user to this Joomla User Group <em>dynamically</em> when they have NOT linked their Joomla user profile with a social network account. The user group assignment is only valid throughout the login session and is NOT stored in the database."
 
 PLG_SYSTEM_SOCIALLOGIN_LINKEDACCOUNTUSERGROUP_NOGROUP="-- Do not assign a User Group --"
-
 
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDACTION="Invalid Social Login action"
 PLG_SYSTEM_SOCIALLOGIN_ERR_AJAX_INVALIDSLUG="Invalid Social Login slug"
