--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 <?php die(); ?>
-Akeeba SocialLogin 3.2.8
+Akeeba SocialLogin 4.0.0
 ================================================================================
-# [LOW] Joomla 4.0 beta 7 changed how extra login button icons are handled. Again.
+~ Rewritten for Joomla 4
 
 Akeeba SocialLogin 3.2.7
 ================================================================================
