--- a/plugins/sociallogin/apple/language/en-GB/plg_sociallogin_apple.ini
+++ b/plugins/sociallogin/apple/language/en-GB/plg_sociallogin_apple.ini
@@ -38,6 +38,12 @@ PLG_SOCIALLOGIN_APPLE_FIELD_BYPASSVALIDATION_DESC="Only applies when creating ne
 PLG_SOCIALLOGIN_APPLE_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_APPLE_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
 
+PLG_SOCIALLOGIN_APPLE_FIELD_FGCOLOR_LABEL="Button foreground color"
+PLG_SOCIALLOGIN_APPLE_FIELD_FGCOLOR_DESC="The foreground (text) color for the login, link and unlink buttons created with this plugin. Default: <code>#FFFFFF</code>"
+
+PLG_SOCIALLOGIN_APPLE_FIELD_BGCOLOR_LABEL="Button background color"
+PLG_SOCIALLOGIN_APPLE_FIELD_BGCOLOR_DESC="The background color for the login, link and unlink buttons created with this plugin. Default: <code>#000000</code>"
+
 PLG_SOCIALLOGIN_APPLE_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_APPLE_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Apple ID."
 PLG_SOCIALLOGIN_APPLE_ERROR_LOCAL_USERNAME_CONFLICT="An account with the same username or email address as your Apple ID account already exists on this site. Please log in to your account on this site and then link your Apple ID to it. If you do not remember having a user account yet please create a new one first."
