--- a/plugins/sociallogin/google/language/en-GB/plg_sociallogin_google.ini
+++ b/plugins/sociallogin/google/language/en-GB/plg_sociallogin_google.ini
@@ -35,6 +35,12 @@ PLG_SOCIALLOGIN_GOOGLE_FIELD_BYPASSVALIDATION_DESC="Only applies when creating n
 PLG_SOCIALLOGIN_GOOGLE_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_GOOGLE_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
 
+PLG_SOCIALLOGIN_GOOGLE_FIELD_FGCOLOR_LABEL="Button foreground color"
+PLG_SOCIALLOGIN_GOOGLE_FIELD_FGCOLOR_DESC="The foreground (text) color for the login, link and unlink buttons created with this plugin. Default: <code>#FFFFFF</code>"
+
+PLG_SOCIALLOGIN_GOOGLE_FIELD_BGCOLOR_LABEL="Button background color"
+PLG_SOCIALLOGIN_GOOGLE_FIELD_BGCOLOR_DESC="The background color for the login, link and unlink buttons created with this plugin. Default: <code>#4285F4</code>"
+
 PLG_SOCIALLOGIN_GOOGLE_ERROR_NOT_LOGGED_IN_GOOGLE="You are not logged into Google or you didn't grant permissions for this site to log you in through Google"
 PLG_SOCIALLOGIN_GOOGLE_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_GOOGLE_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Google account."
