--- a/plugins/sociallogin/microsoft/language/en-GB/plg_sociallogin_microsoft.ini
+++ b/plugins/sociallogin/microsoft/language/en-GB/plg_sociallogin_microsoft.ini
@@ -47,6 +47,12 @@ PLG_SOCIALLOGIN_MICROSOFT_FIELD_BYPASSVALIDATION_DESC="Only applies when creatin
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_CUSTOMCSS_LABEL="Button styling"
 PLG_SOCIALLOGIN_MICROSOFT_FIELD_CUSTOMCSS_DESC="When enabled custom CSS for login, link and unlink button styling will be output to the page header. Disable this option if you intend to use your own CSS to style the buttons."
 
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_FGCOLOR_LABEL="Button foreground color"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_FGCOLOR_DESC="The foreground (text) color for the login, link and unlink buttons created with this plugin. Default: <code>#FFFFFF</code>"
+
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_BGCOLOR_LABEL="Button background color"
+PLG_SOCIALLOGIN_MICROSOFT_FIELD_BGCOLOR_DESC="The background color for the login, link and unlink buttons created with this plugin. Default: <code>#2F2F2F</code>"
+
 PLG_SOCIALLOGIN_MICROSOFT_ERROR_NOT_LOGGED_IN_FB="You are not logged into Microsoft Account or you didn't grant permissions for this site to log you in through Microsoft Account."
 PLG_SOCIALLOGIN_MICROSOFT_ERROR_ACCOUNT_DISABLED_OR_NOT_ACTIVATED="Your account on this site is disabled or not activated."
 PLG_SOCIALLOGIN_MICROSOFT_ERROR_LOCAL_NOT_FOUND="You do not have an account on this site that corresponds to this Microsoft Account."
