# [MEDIUM] Could not install on Joomla 4.1

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 4.0.2
+================================================================================
+# [MEDIUM] Could not install on Joomla 4.1
+
 Akeeba SocialLogin 4.0.1
 ================================================================================
 # [MEDIUM] SVG images do not display on sites installed in subdirectories
