# [LOW] PHP Warning in Console (CLI) application
Apparently the CLI application does not have
a current user, it returns null. Groan.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 4.2.1
+================================================================================
+# [LOW] PHP Warning in Console (CLI) application
+
 Akeeba SocialLogin 4.2.0
 ================================================================================
 + Discord integration
