Removed Twitter integration (gh-93)

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 4.4.0
+================================================================================
+- Removed Twitter integration (gh-93)
+
 Akeeba SocialLogin 4.3.0
 ================================================================================
 + Joomla 4.2, PHP 7.4+ only
