--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 3.3.0
+================================================================================
+- Removed Twitter integration (gh-93)
+
 Akeeba SocialLogin 3.2.9
 ================================================================================
 # [HIGH] Uninstallation broken on Joomla 4 due to different installation script event handling.
