~ Fixed packaging issue

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 3.3.1
+================================================================================
+~ Fixed packaging issue
+
 Akeeba SocialLogin 3.3.0
 ================================================================================
 - Removed Twitter integration (gh-93)
