+ Synology SSO support
Close gh-51

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 4.6.0
+================================================================================
++ Synology SSO support (gh-51)
+
 Akeeba SocialLogin 4.5.1
 ================================================================================
 # [LOW] Possible PHP error when updating this along other extensions using the same post-installation script
