--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,8 @@
 <?php die(); ?>
+Akeeba SocialLogin 4.6.1
+================================================================================
+# [HIGH] Fatal error on Joomla! 5 [gh-110]
+
 Akeeba SocialLogin 4.6.0
 ================================================================================
 + Synology SSO support (gh-51)
