--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 <?php die(); ?>
-Akeeba SocialLogin 4.6.1
+Akeeba SocialLogin 4.7.0
 ================================================================================
++ Login with Spotify
 # [HIGH] Fatal error on Joomla! 5 [gh-110]
 
 Akeeba SocialLogin 4.6.0
