# [LOW] PHP 8.3 deprecation on Reflection-related usage

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ Akeeba SocialLogin 4.7.0
 + Login with Twitch
 + Login with Yahoo
 # [HIGH] Fatal error on Joomla! 5 [gh-110]
+# [LOW] PHP 8.3 deprecation on Reflection-related usage
 
 Akeeba SocialLogin 4.6.0
 ================================================================================
